TW-68636 REST API: Add cloud images as a first level field to Agent entity